añadiendo mas css

--- a/Dulce Santa Elena/Contacto.html
+++ b/Dulce Santa Elena/Contacto.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dulce Santa Elena</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header>
         <nav>
-            <img src="./src/14979.jpg" width="300" height="250">
+            <img src="./src/14979.jpg" width="250" height="150">
+        <div class="nav-buttons">
         <ul>
-            <li><a href="./Index.html">Inicio</a></li>
-            <li><a href="./Menu.html">Menu</a></li>
-            <li><a href="./Contacto.html">Contacto</a></li>
-            <li><a href="./Ubicacion.html">Ubicacion</a></li>
+            <a href="./Index.html" class="nav-button">Inicio</a>
+            <a href="./Menu.html" class="nav-button">Menu</a>
+            <a href="./Contacto.html" class="nav-button">Contacto</a>
+            <a href="./Ubicacion.html" class="nav-button">Ubicacion</a>
         </ul>
+        </div>
         </nav>
     </header>
     <section>
