--- a/Dulce Santa Elena/Menu.html
+++ b/Dulce Santa Elena/Menu.html
@@ -5,81 +5,118 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dulce Santa Elena</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header>
         <nav>
-            <img src="./src/14979.jpg" width="300" height="250">
+            <img src="./src/14979.jpg" width="250" height="150">
+        <div class="nav-buttons">
         <ul>
-            <li><a href="./Index.html">Inicio</a></li>
-            <li><a href="./Menu.html">Menu</a></li>
-            <li><a href="./Contacto.html">Contacto</a></li>
-            <li><a href="./Ubicacion.html">Ubicacion</a></li>
+            <a href="./Index.html" class="nav-button">Inicio</a>
+            <a href="./Menu.html" class="nav-button">Menu</a>
+            <a href="./Contacto.html" class="nav-button">Contacto</a>
+            <a href="./Ubicacion.html" class="nav-button">Ubicacion</a>
         </ul>
         </nav>
     </header>
+    <link rel="stylesheet" href="styles2.css" />
     <main>
     <section>
         <h1>Menu</h1>
         <p>Nuestros merengones son los mejores que usted puede probar en toda tu vida 
             con los mejores productos de <strong>100% calidad</strong>.</p>
-        <h3>Merengones</h3>
-        <img src="./src/14870.jpg" alt="DSE Merengones" width="300" height="300">
+            <div class="caja">
+            <ul><h3>Merengones</h3></ul>
+        <img src="./src/14870.jpg" alt="DSE Merengones" width="200" height="160">
         <ul>
             <p><strong>Merengones de 18.000:</strong></p>
-            <li>Fresa melocoton</li> <li>Fresa guanabana</li> <li>Fresa mora</li>
-            <li>Melocoton Guanabana</li> <li>Melocoton mora</li>
+            <li>Fresa melocoton</li> 
+            <li>Fresa guanabana</li>
+            <li>Fresa mora</li>
+            <li>Melocoton Guanabana</li> 
+            <li>Melocoton mora</li>
             <li>Guanabana mora</li>
 
             <p><strong>Merengones de 13.000:</strong></p>
-            <li>Fresa melocoton</li> <li>Fresa guanabana</li>
+            <li>Fresa melocoton</li> 
+            <li>Fresa guanabana</li>
         </ul>
+        </div>
+    </div>
     </section>
     <section>
+        <div class="caja">
         <h3>Obleas</h3>
-        <img src="./src/obleas-colombianas.webp"  alt="Obleas" width="300" height="300">
+        <img src="./src/obleas-colombianas.webp"  alt="Obleas" width="200" height="160">
+        <ul>
         <p><strong>Obleas</strong> desde 3.500 hasta 17.000</p>
-        <li>Arequipe</li><li>Crema de leche</li><li>Queso Mozarella</li>
-        <li>Mermelada de Mora o Mermelada de Ochuva</li><li>Maní</li><li>Coco</li>
+        <li>Arequipe</li>
+        <li>Crema de leche</li>
+        <li>Queso Mozarella</li>
+        <li>Mermelada de Mora o Mermelada de Ochuva</li>
+        <li>Maní</li>
+        <li>Coco</li>
         <li><strong>Fruta:</strong>Fresa o Melocoton</li>
-
+    </ul>
     </section>
     <section>
+        <div class="caja">
         <h3>Fresas con crema</h3>
-        <img src="./src/7bf7f0e6d29d285e260b0246ad22a8e6_strawberries_with_cream_new_1080_850.jpg" alt="FCCrema" width="300" height="300">
+        <img src="./src/7bf7f0e6d29d285e260b0246ad22a8e6_strawberries_with_cream_new_1080_850.jpg" alt="FCCrema" width="200" height="160">
         <p><strong>Fresas con Creama</strong></p>
         <li>14.000</li>
         <li>18.000</li>
-
+        </div>
     </section>
     <section>
+        <div class="caja">
         <h3>Fresas con chocolate</h3>
-        <img src="./src/14982.jpg" alt="DSE FCChocolate" width="300" height="300">
-        <li><strong>Fresas con Chocolate Negro:</strong></li> Desde 5.000 hasta 12.000
-        <li><strong>Fresas con Chocolate Blanco:</strong></li> Desde 6.000 hasta 12.000
-
+        <img src="./src/14982.jpg" alt="DSE FCChocolate" width="200" height="160">
+        <ul>
+        <li><strong>Fresas con Chocolate Negro:</strong></li> 
+        <p>Desde 5.000 hasta 12.000</p>
+        <li><strong>Fresas con Chocolate Blanco:</strong></li> 
+        <p>Desde 6.000 hasta 12.000</p>
+        </ul>
+        </div>
     </section>
     <section>
+        <div class="caja">
         <h3>Solteritas</h3>
-        <img src="./src/s-l400.jpg" alt="Solteritas" width="300" height="300">
+        <img src="./src/s-l400.jpg" alt="Solteritas" width="200" height="160">
+        <ul>
         <p><strong>Solteritas</strong> a 3.000</p>
+        </ul>
+        </div>
     </section>
     <section>
+        <div class="caja">
         <h3>Crispetas</h3>
-        <img src="./src/GK5PPCN3RBE3RFVADMNOTPNCMM.avif" alt="Crispetas" width="300" height="300">
+        <img src="./src/GK5PPCN3RBE3RFVADMNOTPNCMM.avif" alt="Crispetas"  width="200" height="160">
+        <ul>
         <p><strong>Crispetas</strong> a 5.000</p>
+        </ul>
+        </div>
     </section>
     <section>
+        <div class="caja">
         <h3>Mango</h3>
-        <img src="./src/cubitos-mango-maduro-o-pieza-cortada-dispuestas-vaso-transparente-mango-colocado-al-lado-sobre-fondo-color-negro_527904-362.avif" alt="Mango" width="300" height="300">
+        <img src="./src/cubitos-mango-maduro-o-pieza-cortada-dispuestas-vaso-transparente-mango-colocado-al-lado-sobre-fondo-color-negro_527904-362.avif" alt="Mango"  width="200" height="160">
+        <ul>
         <p><strong>Mango</strong> a 4.000 y a 5.000</p>
+        </ul>
+    </div>
     </section>
     <section>
+        <div class="caja">
         <h3>Bebidas</h3>
-        <img src="./src/bebidas-no-alcohólicas.jpg" alt="Bebidas" width="300" height="300">
+        <img src="./src/bebidas-no-alcohólicas.jpg" alt="Bebidas"  width="200" height="160">
+        <ul>
         <li><strong>Agua</strong>: 3.000</li><li><strong>Cerveza</strong>: 4.000</li><li><strong>Cocacola</strong>: 3.000</li>
         <li><strong>Cuatro</strong>: 3.000</li><li><strong>Gatorade</strong>: 4.000</li>
-        
+        </ul>
+        </div>
     </section>
     </main>
 </body>
